SOS-1917 Fixing overlapping input fields in SO Welcome Theme

--- a/themes/so-welcome-theme/docroot/_diffs/css/so-skin-ce.css
+++ b/themes/so-welcome-theme/docroot/_diffs/css/so-skin-ce.css
@@ -174,6 +174,10 @@ input[type=button], input[type=reset], input[type=submit], #sign-in:hover, .aui-
 			width: 225px;
 		}
 
+		select, .taglib-captcha input[type="text"] {
+			width: auto;
+		}
+
 		.navigation {
 			border: 1px solid $gray;
 			left: 0;
